New Brach HttpClient created to use another HTTP method.